# GitHub-Security-Alerts-Workflow

./: .gitignore  .pylintrc  Dockerfile  NOTICE  README.md  arguments.py  constants.py  graph_ql.py  queries.py  requirements.txt  screwdriver.yaml  setup.cfg  setup.py  tox.ini
src/github_security_alerts/: arguments.py  cli.py  constants.py  graph_ql.py  queries.py
tests/: test_arguments.py
