# Copyright 2019, Oath Inc.
# Licensed under the terms of the Apache 2.0 license. See LICENSE file in project root for terms.
[metadata]
author = Verizon Media Python Platform Team
author_email = 254983+dwighthubbard@users.noreply.github.com
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = This script is for teams that want to leverage GitHub Security Alerts into their workflow
keywords = python3 github security-alerts
license = Apache License
license_file = LICENSE
long_description = file:README.md
long_description_content_type = text/markdown
name = github_security_alerts
url = https://github.com/yahoo/GitHub-Security-Alerts-Workflow
version = 0.0.0

[options]
install_requires =
    requests

packages=
    github_security_alerts

package_dir=
    =src

python_requires = >="3.5"

scripts =
    src/github_security_alerts/graph_ql.py

[options.extras_require]
test =
    pytest
    pytest-cov
    vcrpy-unittest

[options.entry_points]
console_scripts =
    graph_ql.py = github_security_alerts.cli:main

[mypy]
ignore_missing_imports = True

[pycodestyle]
count = False
ignore = W291
max-line-length = 160
statistics = True

[sdv4.version]
version_plugin = SDV4_BUILD_NUMBER
